reasoning_transformations/CRUXEval/Transformations/logs/sample_185.log
STARTING AT 2024-10-19 22:02:26.705233
[START] processing file: sample_185
*Running tests for: sample_185
 
Result: ['tests_pass']
tests_pass sample_185 /home/yang/Benchmark/dataset/cruxeval/code//sample_185.py
Apply all rules on a single file.
Checking transformation add_nested_for_out
*Running tests for: sample_185
 
Result: ['tests_pass']
Checking transformation add_nested_while_out
*Running tests for: sample_185
 
Result: ['tests_pass']
Checking transformation add_nested_list
*Running tests for: sample_185
 
Result: ['tests_pass']
Checking transformation transform_range_to_recursion
*Running tests for: sample_185
   File "/home/yang/Benchmark/.tmp_test/tmp_test.pysample_185", line 9
    nonlocal whileloopchecker29, i, whileloopchecker19, j
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: no binding for nonlocal 'whileloopchecker29' found

output_actual, stderr_data: ('', b'  File "/home/yang/Benchmark/.tmp_test/tmp_test.pysample_185", line 9\n    nonlocal whileloopchecker29, i, whileloopchecker19, j\n    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\nSyntaxError: no binding for nonlocal \'whileloopchecker29\' found\n')
Result: ['error_or_timeout']
Drop transform_range_to_recursion due to ['error_or_timeout']
Checking transformation add_datetime
*Running tests for: sample_185
 
Result: ['tests_pass']
Checking transformation add_time
*Running tests for: sample_185
 
Result: ['tests_pass']
Checking transformation create_functions
*Running tests for: sample_185
 
Result: ['tests_pass']
Checking transformation add_decorator
*Running tests for: sample_185
 
Result: ['tests_pass']
Checking transformation add_http
*Running tests for: sample_185
 
Result: ['tests_pass']
Checking transformation add_scipy
*Running tests for: sample_185
 
Result: ['tests_pass']
Checking transformation add_base64
*Running tests for: sample_185
 
Result: ['tests_pass']
Checking transformation add_dateutil
*Running tests for: sample_185
 
Result: ['tests_pass']
The file 'reasoning_transformation_cruxeval/CRUXEval/e1f735e05ec0002c7d6ed7d62be776995bf4ddf4/Transformation/sample_185.py' has been formatted successfully.
Checking reasoning_transformation_cruxeval/CRUXEval/e1f735e05ec0002c7d6ed7d62be776995bf4ddf4/Transformation/sample_185.py
*Running tests for: sample_185
 
Result: ['tests_pass']
{ 'applicable_rules': [ 'change_var_names',
                        'add_nested_for_out',
                        'add_nested_while_out',
                        'add_try_except_inside_functions',
                        'add_else_to_for',
                        'add_else_to_while',
                        'add_nested_list',
                        'add_datetime',
                        'add_time',
                        'add_crypto',
                        'add_sklearn',
                        'create_functions',
                        'add_decorator',
                        'add_http',
                        'add_scipy',
                        'add_base64',
                        'add_dateutil',
                        'changing_AugAssign'],
  'diff_output': 'reasoning_transformation_cruxeval/CRUXEval/e1f735e05ec0002c7d6ed7d62be776995bf4ddf4/Transformation/sample_185.patch',
  'evaluation_tests_dir': '/home/yang/Benchmark/dataset/cruxeval/',
  'exception': None,
  'file_id': 'sample_185',
  'genetic_algorithm': None,
  'original_code': 'def f(L):\n'
                   '    N = len(L)\n'
                   '    for k in range(1, N // 2 + 1):\n'
                   '        i = k - 1\n'
                   '        j = N - k\n'
                   '        while i < j:\n'
                   '            (L[i], L[j]) = (L[j], L[i])\n'
                   '            i += 1\n'
                   '            j -= 1\n'
                   '    return L',
  'patch_path': 'reasoning_transformation_cruxeval/CRUXEval/e1f735e05ec0002c7d6ed7d62be776995bf4ddf4/Transformation/sample_185.patch',
  'single_rule': None,
  'source_file': '/home/yang/Benchmark/dataset/cruxeval/code//sample_185.py',
  'target_file': 'reasoning_transformation_cruxeval/CRUXEval/e1f735e05ec0002c7d6ed7d62be776995bf4ddf4/Transformation/sample_185.py',
  'test_results_after': ['tests_pass'],
  'test_results_before': ['tests_pass'],
  'total_time': 5.016267,
  'transformed_code': 'from dateutil.parser import parse\n'
                      'import base64\n'
                      'from scipy.stats import ttest_ind\n'
                      'from http.client import HTTPConnection\n'
                      '\n'
                      'def my_decorator(func):\n'
                      '\n'
                      '    def dec_result(*args, **kwargs):\n'
                      '        res = func(*args, **kwargs)\n'
                      '        return res\n'
                      '    return dec_result\n'
                      '\n'
                      '@my_decorator\n'
                      'def newFunc0_17(k, variable_3_17):\n'
                      '    ttest_ind([69, 45, 20], [87, 80, 83])\n'
                      "    parse('2024-10-19 22:02:30')\n"
                      '    return k - variable_3_17\n'
                      'from sklearn.utils import shuffle\n'
                      'from cryptography.fernet import Fernet\n'
                      'import time\n'
                      'import datetime\n'
                      '\n'
                      'def f(L):\n'
                      "    base64.b64encode(b'94658297914074227368')\n"
                      "    HTTPConnection('google.com', port=80)\n"
                      '    shuffle([60, 37, 71])\n'
                      '    datetime.datetime.now()\n'
                      '    Fernet.generate_key()\n'
                      '    time.sleep(0.03)\n'
                      '    try:\n'
                      '        newN_1 = len(L)\n'
                      '        LoopChecker13 = [550][0]\n'
                      '        LoopChecker23 = 549\n'
                      '        for LoopIndexOut in range(LoopChecker13 // '
                      'LoopChecker23):\n'
                      '            for k in range(1, newN_1 // 2 + 1):\n'
                      '                variable_3_17 = 1\n'
                      '                i = newFunc0_17(k, variable_3_17)\n'
                      '                j = newN_1 - k\n'
                      '                whileloopchecker19 = 68\n'
                      '                whileloopchecker29 = 67\n'
                      '                while whileloopchecker19 % '
                      'whileloopchecker29 == 1:\n'
                      '                    whileloopchecker19 = '
                      'whileloopchecker19 + 1\n'
                      '                    while i < j:\n'
                      '                        (L[i], L[j]) = (L[j], L[i])\n'
                      '                        i += 1\n'
                      '                        j -= 1\n'
                      '                else:\n'
                      '                    pass\n'
                      '        else:\n'
                      '            pass\n'
                      '        return L\n'
                      '    except:\n'
                      '        pass'}
[END] processing file: sample_185. Total Time: 5.016267
END AT 2024-10-19 22:02:31.722739
